--- a/web4/style.css
+++ b/web4/style.css
@@ -1,48 +1,26 @@
-.error {
-  border: 2px solid red;
+html {
+    background-color: #f5f5f5;
 }
 
-body {
-    font-family: sans-serif;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    margin: 2rem auto;
-    background-color: lightblue;
+#form {
+    background-color: #ffffff;
     padding: 20px;
-    box-sizing: border-box;
-    border-radius: 20px;
+    border-radius: 4px;;
+    max-width: 425px;
+    height: 100%;
 }
 
-label {
-    font-weight: bold;
-}
-
-input, select, textarea {
-    margin: 0.75em 0;
-}
-
-input[type="submit"] {
-    border-radius: 5px;
-    background-color: #efefef;
-    color: #444;
-    border: none;
-    padding: 10px 50px;
-    font-size: 1em;
-}
-
-input[type="submit"]:hover {
-    background-color: #ececec;
-    color: #222;
+#btn {
     cursor: pointer;
 }
 
-input, select, textarea {
-    padding: 8px 8px;
-    font-size: 1em;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+#btn::after {
+    border-color: transparent transparent #00d1b2 #00d1b2!important;
+}
+
+@media screen and (min-width: 426px) {
+    #form {
+        height: auto;
+        margin: 2em auto;
+    }
 }
